tweaks - fix scroll on mobile – fix footer alignment spacing – update page styling for articles – fix breadcrumbs not full width on sub articles – update all button styles to use new rocky top arrow – update latest post featured to have visual arrow and tweak spacing – fix alignment thought leadership articles – change color for inline links – new fancyLink

--- a/src/scss/_extend.scss
+++ b/src/scss/_extend.scss
@@ -7,6 +7,7 @@
 .site-inner {
   clear: both;
   margin: 0 auto;
+
   //   padding: 60px 30px 0;
   //   border: 2px solid red;
 }
@@ -295,8 +296,9 @@ h1.adaOrange {
     //   padding: 0.5rem;
 
     // }
-    font-weight: $font-weight-bold;
+    font-weight: $font-weight-normal;
     // text-transform: uppercase;
+    font-style: italic;
     font-size: $font-size-sm;
   }
   // &:last-child {
@@ -314,12 +316,15 @@ h1.adaOrange {
   &:before {
     content: url('https://images.utk.edu/wds/clifton-strengths-icon.svg');
     padding-top: 0.25rem;
+    transform: scale(0.75);
+    transform-origin: top left;
     align-self: center;
     display: block;
     position: relative;
     left: 0;
     flex-basis: 100%;
     margin-top: $spacer;
+    margin-bottom: -0.5rem;
   }
 }
 .removeCliftonIcon {
@@ -347,11 +352,13 @@ h1.adaOrange {
     content: url('https://images.utk.edu/wds/clifton-strengths-icon.svg');
     padding-top: 0.25rem;
     align-self: center;
+    transform: scale(0.75);
+    transform-origin: top left;
     display: block;
     position: relative;
     left: 0;
-
     margin-left: 0.5rem;
+    margin-bottom: -0.5rem;
   }
 }
 
@@ -359,15 +366,51 @@ h1.adaOrange {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: calc($spacer * 3);
+  gap: 0.25vw;
   margin-bottom: $spacer;
-}
-.fancyLinkGroup > * {
-  width: auto;
-  display: flex;
+  > * {
+    width: auto;
+    display: flex;
+    margin-right: calc($spacer * 4.25);
+  }
 }
 
-// styling to add to text that has been linked in the page. Adds animated > on hover
+// // styling to add to text that has been linked in the page. Adds animated > on hover Using SOLID > with underline
+// .fancyLink a {
+//   // font-size: 1.2rem;
+//   /* default button size is $font-size-base: 1.25 So removing override for now since it is close, allows btn-lg and btn-sm to take affect */
+//   line-height: 1.3rem; // keeps > in correct alignment
+//   text-decoration: none;
+//   position: relative;
+//   display: inline-block;
+//   margin: calc($spacer * 0.5) 0;
+//   padding: 0 0.5rem 0.5rem 0;
+//   box-shadow: inset 0px -1px $utorange;
+//   font-style: italic;
+//   font-weight: 600;
+//   letter-spacing: 0.01rem;
+//   text-align: right;
+//   &:after {
+//     content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='22' fill='%23ff8200' viewBox='0 0 25 26' %3E%3Cpath d='M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z' /%3E%3C/svg%3E");
+//     margin-left: 0.5rem;
+//     display: inline-block;
+//     position: absolute;
+//     transition: all 0.2s ease-out;
+//   }
+//   &:hover {
+//     text-decoration: none;
+//     box-shadow: inset 0px -1px $utlinkriver;
+//   }
+//   &:hover:after {
+//     margin-left: 0.7rem;
+//   }
+//   .bi {
+//     /* turning off any chosen icons */
+//     display: none;
+//   }
+// }
+
+// styling to add to text that has been linked in the page. Adds animated --> on hover
 .fancyLink a {
   // font-size: 1.2rem;
   /* default button size is $font-size-base: 1.25 So removing override for now since it is close, allows btn-lg and btn-sm to take affect */
@@ -376,25 +419,47 @@ h1.adaOrange {
   position: relative;
   display: inline-block;
   margin: calc($spacer * 0.5) 0;
-  padding: 0 0.5rem 0.5rem 0;
-  box-shadow: inset 0px -1px $utorange;
-  font-style: italic;
+  padding: 0 0 0.5rem 0;
+  // display: flex;
+  // flex-direction: row;
+  // justify-content: flex-start;
+  // box-shadow: inset 0px -1px $utorange;
+  // font-style: italic;
   font-weight: 600;
   letter-spacing: 0.01rem;
-  text-align: right;
+  text-align: rileght;
+  color: $utsmokey;
+  // &:first-letter {
+  //   color: $utlinkriver;
+  // }
+  * {
+    display: inline-flex;
+    border: 1px solid red;
+  }
+
   &:after {
-    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='22' fill='%23ff8200' viewBox='0 0 25 26' %3E%3Cpath d='M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z' /%3E%3C/svg%3E");
-    margin-left: 0.5rem;
+    content: url('https://images.utk.edu/wds/rocky-top-arrow-02.svg');
+
+    transform: scale(0.25);
+    // margin-left: -1.5rem;
+    margin-left: calc($spacer * 0.7);
+    transform-origin: top left;
+    // top: -1.4rem;
+    // top: calc($spacer * 0.2);
     display: inline-block;
     position: absolute;
     transition: all 0.2s ease-out;
+    padding-top: 1rem;
   }
   &:hover {
     text-decoration: none;
-    box-shadow: inset 0px -1px $utlinkriver;
+    color: $utlinkhover;
+    color: $utlinkriver;
+    // box-shadow: inset 0px -1px $utlinkriver;
   }
   &:hover:after {
-    margin-left: 0.7rem;
+    // margin-left: -1.2rem;
+    margin-left: calc($spacer * 1.1);
   }
   .bi {
     /* turning off any chosen icons */
@@ -420,7 +485,8 @@ h1.adaOrange {
       display: flex;
       flex-direction: column;
       a:link {
-        font-style: italic;
+        // font-style: italic;
+        font-style: normal;
         font-weight: $font-weight-bold;
       }
     }
@@ -467,10 +533,15 @@ h1.adaOrange {
     flex-wrap: nowrap !important;
   }
 }
-
+// Home Hero Signature
 .signature img.wp-block-cover__image-background:first-of-type {
   object-fit: contain;
   @media screen and (min-width: 1200px) {
     object-fit: cover;
   }
+}
+
+// remove the empty sidebar from bottom pages that are not using it
+.page-template-default .sidebar-primary {
+  display: none;
 }
